--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formidable": "^3.5.1",
     "framer-motion": "^11.15.0",
     "fs": "^0.0.1-security",
+    "jsdom": "^25.0.1",
     "next": "^13.5.7",
     "node-html-parser": "^6.1.13",
     "openai": "^4.24.2",
@@ -38,6 +39,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
