--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-html-parser": "^6.1.13",
     "openai": "^4.24.2",
     "pdfjs-dist": "^4.0.379",
+    "playwright": "^1.49.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
