--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.15.0",
     "fs": "^0.0.1-security",
     "jsdom": "^25.0.1",
+    "nanoid": "^5.1.3",
     "next": "^13.5.7",
     "node-html-parser": "^6.1.13",
     "openai": "^4.24.2",
